--- a/build.yaml
+++ b/build.yaml
@@ -13,5 +13,7 @@
 #
 ---
 include:
-  - board: glove80_lh
-  - board: glove80_rh
+  - board: nice_nano_v2
+    shield: lily58_left
+  - board: nice_nano_v2
+    shield: lily58_right
